// Copyright 2020 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package cv.run.eventpb;

option go_package = "go.chromium.org/luci/cv/internal/run/eventpb;eventpb";

import "google/protobuf/timestamp.proto";


// PokeRunTask sends a signal to RunManager to process events.
//
// Always used with de-duplication and thus can't be created from a transaction.
//
// Queue: "manage-run".
message PokeRunTask {
  string run_id = 1;
}

// KickPokeRunTask starts a task to actually enqueue PokeRunTask. It exists in
// order to poke RunManager from a transaction.
//
// Queue: "manage-run".
message KickPokeRunTask {
  string run_id = 1;
  google.protobuf.Timestamp eta = 2;
}
